@@ -551,6 +551,21 @@ class NodeSetTest(unittest.TestCase):
         self.assertEqual(len(nodeset[21:24]), 0)
         self.assertEqual(str(nodeset[21:24]), "")
 
+    def testSplit(self):
+        """test NodeSet split()"""
+
+        # Empty nodeset
+        nodeset = NodeSet()
+        self.assertEqual((NodeSet(), NodeSet()), tuple(nodeset.split(2)))
+
+        # Not enough element
+        nodeset = NodeSet("foo[1]")
+        self.assertEqual((NodeSet("foo[1]"), NodeSet()), tuple(nodeset.split(2)))
+
+        # Exact number of elements
+        nodeset = NodeSet("foo[1-6]")
+        self.assertEqual((NodeSet("foo[1-2]"), NodeSet("foo[3-4]"), NodeSet("foo[5-6]")), tuple(nodeset.split(3)))
+
     def testAdd(self):
         """test NodeSet add()"""
         nodeset = NodeSet()
